index logo and via js

--- a/laurentperez.fr/talks/css1/index.html
+++ b/laurentperez.fr/talks/css1/index.html
@@ -49,9 +49,10 @@
 				<section>
 					<h2>Meetup Frontend #1</h2>
 					<p>MTH / Web Front</p>
+					<p>" De la magie avec CSS Houdini "</p>
 					<p><img src="awe.png" alt=""></p>
-					<small>laurentperez.fr/talks/css1</small>
 					<p><img src="mth.jpg" width="100px"/></p>
+					<small>laurentperez.fr/talks/css1</small>
 				</section>
 
 				<section>
@@ -63,7 +64,7 @@
 
 			<section>
 				<h2>✨ CSS Houdini ✨</h2>
-				<p class="fragment fade-up">tl;dr : pour un accès direct au moteur CSS</p>
+				<p class="fragment fade-up">tl;dr : pour un accès direct au moteur CSS via JS</p>
 				<p class="fragment fade-up">on a un véritable accès au moteur</p>
 				<p class="fragment fade-up">on peut y créer nos propriétés, peinture/clip, animation, layout</p>
 				<p class="fragment fade-up">travail commencé circa 2016</p>
