--- a/laurentperez.fr/talks/css1/index.html
+++ b/laurentperez.fr/talks/css1/index.html
@@ -123,7 +123,16 @@
 				<p>Firefox (Servo) est à la bourre. IE va utiliser Blink (M78)</p>
 				<p>lire les questions sur <a href="https://github.com/w3c/css-houdini-drafts/issues">https://github.com/w3c/css-houdini-drafts/issues</a></p>
 				<p>réponses des auteurs de specs et fabricants</p>
-				<p>Important : WAAPI à 100% dans Safari TP / iOS13 (sans Worklet, uc), 80% CR FF</p>
+				<p class="fragment fade-up">Important : WAAPI à 100% dans Safari TP / iOS13 (sans Worklet, uc), 80% CR FF</p>
+			</section>
+
+			<section>
+				<p>Que Firefox soit en "retard" <em>n'est pas une mauvaise chose</em></p>
+				<p class="fragment fade-up">C'est dû au switch de Gecko vers Servo à partir de 2017</p>
+				<p class="fragment fade-up">On veut de la diversité dans les moteurs de rendu, Servo est top</p>
+				<p class="fragment fade-up">Pas de One Blink to rule them all</p>
+				<small>FF Worklet mi Août : <a href="https://bugzilla.mozilla.org/show_bug.cgi?id=1315239">https://bugzilla.mozilla.org/show_bug.cgi?id=1315239</a></small>
+				<small>en Q3 2019 tout Houdini marqué en enhancement, les tickets dataient de 2017</small>
 			</section>
 			
 			<section>
