--- a/laurentperez.fr/talks/css1/index.html
+++ b/laurentperez.fr/talks/css1/index.html
@@ -49,11 +49,22 @@
 				<section>
 					<h2>Meetup Frontend #1</h2>
 					<p>MTH / Web Front</p>
-					<p>" De la magie avec CSS Houdini "</p>
+					<p>" De la magie CSS avec Houdini "</p>
+					<p>Dessin et animation nouvelle génération</p>
 					<p><img src="awe.png" alt=""></p>
-					<p><img src="mth.jpg" width="100px"/></p>
+					<p><img src="mth.jpg" width="60px"/></p>
 					<small>laurentperez.fr/talks/css1</small>
 				</section>
+				<!--
+					Houdini est un nouveau jeu de fonctions qui donne
+					un accès direct au moteur CSS via JS, permettant de dessiner
+					ou d'animer sans librairie tierce, et bien plus encore.
+					Les travaux ont débuté en 2016 et il arrive aujourd'hui 
+					à maturation
+					Le talk présente toutes les nouvelles fonctions
+					Avec démos à la clé !
+
+				-->
 
 				<section>
 					<h2>Toi, public</h2>
