--- a/laurentperez.fr/talks/css1/index.html
+++ b/laurentperez.fr/talks/css1/index.html
@@ -251,6 +251,12 @@ CSS.registerProperty({
 			</section>
 
 			<section>
+				<p>Jouer avec le temps, animer du complexe</p>
+				<p><img src="tars.jpg" alt=""></p>
+				<small>Ca peut être un peu complexe</small>
+			</section>
+
+			<section>
 				<p>Sprints et roadmap : <a href="https://www.chromium.org/teams/animations/animation-objectives">https://www.chromium.org/teams/animations/animation-objectives</a></p>
 				<p>Pour le moment (Août), <em>GroupEffect</em> = groupe de <em>KeyFrameEffects</em> est caché (flag)</p>
 				<p class="fragment fade-up">exemple : démarrer l'animation B quand la A est à 50%, démarrer B, C, D en même temps mais avec des offsets (= parallaxe/stagger), pause() ou play() les effets en bloc</p>
