--- a/laurentperez.fr/talks/css1/index.html
+++ b/laurentperez.fr/talks/css1/index.html
@@ -247,13 +247,13 @@ CSS.registerProperty({
 				<p class="fragment fade-up">NON. La Worklet est une <em>extension</em> de WAAPI qui donne un <em>Effect</em>, des <em>timelines</em> libres (dont une <em>ScrollTimeline</em>) et un état optionel (stateful)</p>
 				<p class="fragment fade-up">ex: se souvenir de l'état quand le moteur bouge la Worklet entre threads</p>
 				<p class="fragment fade-up">ex: accélérer/distordre le temps (document.timeline modifiable)</p>
-				<p><a href="../waapi">demo (activer le paint flashing)</a></p>				
+				<p><a href="../waapi">demo (+ question paint flashing)</a></p>				
 			</section>
 
 			<section>
-				<p>Jouer avec le temps, animer du complexe</p>
+				<p>Jouer avec le temps, animer des éléments distincts</p>
 				<p><img src="tars.jpg" alt=""></p>
-				<small>Ca peut être un peu complexe</small>
+				<small>Ne pas voir ça comme de la sci-fi complexe. La clef est la timeline.</small>
 			</section>
 
 			<section>
