--- a/laurentperez.fr/talks/css1/index.html
+++ b/laurentperez.fr/talks/css1/index.html
@@ -47,15 +47,16 @@
 			<div class="slides">
 				
 				<section>
-					<h2>Meetup Frontend #1</h2>
-					<p>MTH / Web Front</p>
-					<p>" De la magie CSS avec Houdini "</p>
-					<p>Dessin et animation nouvelle génération</p>
+					<p>Meetup AFUP / Web Front</p>
+					<p>"Le moteur CSS sous stéroides avec la magie d'Houdini"</p>
+					<p>Dessin et animations nouvelle génération</p>
 					<p><img src="awe.png" alt=""></p>
-					<p><img src="mth.jpg" width="60px"/></p>
+					<p><img src="mth.jpg" width="30px"/></p>
 					<small>laurentperez.fr/talks/css1</small>
 				</section>
 				<!--
+					Le moteur CSS sous stéroides avec la magie Houdini
+					Dessin et animation nouvelle génération
 					Houdini est un nouveau jeu de fonctions qui donne
 					un accès direct au moteur CSS via JS, permettant de dessiner
 					ou d'animer sans librairie tierce, et bien plus encore.
@@ -196,7 +197,7 @@ CSS.registerProperty({
 				<p class="fragment fade-up">La géométrie de l'élément peint change (ex:resize)</p>
 				<p class="fragment fade-up">La timeline bouge (ex:scroll, demo plus loin)</p>
 				<p class="fragment fade-up">Une Worklet va peindre à <em>chaque frame, donc au minimum à 60fps</em></p>
-				<p class="fragment fade-up">C'est un WebWorker en plus léger, câblé directement sur le Compositing : tu repaint seulement une zone, sans repasser par les calculs DOM. Voir ça un peu comme un layer Photoshop </p>
+				<p class="fragment fade-up">C'est un WebWorker en plus léger, câblé directement sur le moteur CSS. Voir ça un peu comme un layer Photoshop </p>
 			</section>
 
 			<section>
@@ -238,12 +239,12 @@ CSS.registerProperty({
 				<p>Animations non blocking à 60fps relatives à la timeline et au scroll
 				... c'est surtout fait pour le scroll, et ça le fait bien</p>
 				<small>qui a déjà fait des parallaxes fluides ? des offsets / staggering ? anime.JS ?</small>
-				<p>Syntaxe : <em>AnimationWorklet + KeyFrameEffect</em></p>
-				<p>Note : séquence/chorégraphie/playback à faire à la main. Un peu pénible, car <em>GroupEffect</em> dans la spec</p>
+				<p>Syntaxe : <em>AnimationWorklet + KeyFrameEffects</em></p>
+				<p>Note : séquence/chorégraphie à faire à la main. Un peu pénible, car <em>GroupEffect</em> dans la spec</p>
 			</section>
 			<section>
 				<p>Encore une API d'animation ?</p>
-				<small>... on a déjà CSS transitions, CSS animations (@keyframes), Web Animations API (el.animate({...}).pause())</small>
+				<small>... on a déjà CSS transitions, CSS animations (@keyframes), Web Animations API sans CSS (el.animate({...}).pause())</small>
 				<p class="fragment fade-up">NON. La Worklet est une <em>extension</em> de WAAPI qui donne un <em>Effect</em>, des <em>timelines</em> libres (dont une <em>ScrollTimeline</em>) et un état optionel (stateful)</p>
 				<p class="fragment fade-up">ex: se souvenir de l'état quand le moteur bouge la Worklet entre threads</p>
 				<p class="fragment fade-up">ex: accélérer/distordre le temps (document.timeline modifiable)</p>
@@ -251,9 +252,18 @@ CSS.registerProperty({
 			</section>
 
 			<section>
+				<p>Pourquoi on a toujours du paint flashing ? - sur certains éléments</p>
+				<p class="fragment fade-up">Parce que j'ai modifié leur géométrie ou box shadow</p>
+				<p class="fragment fade-up"><a href="https://csstriggers.com/">https://csstriggers.com/</a></p>
+				<p class="fragment fade-up">Mais la Worlet reste câblée sur le Compositor, elle 'saute' les phases de construction des arbres DOM et CSSOM, donc ça va vite</p>
+				<small class="fragment fade-up">fini les hacks risqués translate3d(0,0,0), la Worklet promeut l'élément dans le Compositor</small>
+			</section>
+
+			<section>
 				<p>Jouer avec le temps, animer des éléments distincts</p>
 				<p><img src="tars.jpg" alt=""></p>
 				<small>Ne pas voir ça comme de la sci-fi complexe. La clef est la timeline.</small>
+				<small>Penser en distance relative au temps : km/h, m/s</small>
 			</section>
 
 			<section>
